--- a/source/sass/_carousel.scss
+++ b/source/sass/_carousel.scss
@@ -5,28 +5,72 @@
 */
 
 
+/* IPHONE 4, IPHONE 5 */
+.carousel-casa-container {
+	#carousel-casa {
+		.carousel-casa-image-wrapper {
+			.carousel-item {
+				.casa-slide {
+					width: 100%;
+					height: 220px;
+				}
+			}
+		}
+	}
+}
+
+/* IPHONE 6 */
+@media screen and (min-width: 375px) {
+	.carousel-casa-container {
+		#carousel-casa {
+			.carousel-casa-image-wrapper {
+				.carousel-item {
+					.casa-slide {
+						width: 100%;
+						height: 250px;
+					}
+				}
+			}
+		}
+	}
+}
+/* IPHONE 6 PLUS */
+@media screen and (min-width: 414px) {
+	.carousel-casa-container {
+		#carousel-casa {
+			.carousel-casa-image-wrapper {
+				.carousel-item {
+					.casa-slide {
+						width: 100%;
+						height: 276px;
+					}
+				}
+			}
+		}
+	}
+}
 /* SMARTPHONE - iPhone 6 */
 #carousel-about {
 
 	.carousel-container {
 		width: 100%;
+		height: auto;
 	
 		.slide-img {
-			max-width: 100%;
+			width: 100%;
+			@extend .img-fluid;
 			/*height: 250px;*/
 		}
 	}
 }
 
-.carouse-casa {
+/* IPHONE 4 */
+/*@media only screen and (min-device-width: 320px) and (max-device-height: 480px) {*/
 	
-	.carousel-casa-image-wrapper {
-		
-	}
-}
+/*}*/
 
 /* DESKTOP */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
 	#carousel-about {
 		width: 100%;
 		display: -webkit-flex;
@@ -35,25 +79,25 @@
 		justify-content: center;
 		
 		.carousel-container {
-			max-width: 700px;
+			/*max-width: 700px;
 			width: auto;
 			max-height: 467px;
-			height: auto;
+			height: auto;*/
 			-webkit-box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
 			-moz-box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
 			box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
 			
 			.slide-img {
-				max-width: 700px;
+				/*max-width: 700px;
 				width: auto;
 				max-height: 467px;
-				height: auto;
+				height: auto;*/
 			}
 		}
 	}
 	.carousel-casa-container {
 		width: 100%;
-		margin-bottom: 100px;
+		/*margin-bottom: 100px;*/
 		display: -webkit-flex;
 		display: flex;
 		-webkit-justify-content: center;
