--- a/source/sass/_caseirinho-carte.scss
+++ b/source/sass/_caseirinho-carte.scss
@@ -85,8 +85,9 @@
 	
 	#caseirinho-carte {
 		width: 100%;
-		padding-bottom: 80px;
+		/*padding-bottom: 80px;*/
 		padding-top: 0;
+		padding-bottom: 0;
 	}
 	
 	.caseirinho-carte-content {
