--- a/source/sass/_background.scss
+++ b/source/sass/_background.scss
@@ -12,22 +12,32 @@
 	-o-background-size: cover;
 	background-size: cover;
 }
+.header-caseirinho {
+	background: url(../../dist/img/textura-caseirinho-mobile-bg.jpg) no-repeat center center;
+	/*-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-ms-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;*/
+}
+.header-cozinha {
+	/*@include background-fixed(url(../../dist/img/old-paper-texture-mobile.jpg));*/
+	background: url(../../dist/img/old-paper-texture-mobile.jpg) no-repeat center center;
+}
 .header-cozinha, .header-caseirinho {
 	width: 100%;
 	display: -webkit-flex;
 	display: flex;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 .white-container {
 	width: 100%;
 	padding: 80px 30px 60px 30px;
-}
-.header-caseirinho {
-	@include background-fixed(url(../../dist/img/textura-caseirinho-mobile-bg.jpg));
-}
-.header-cozinha {
-	@include background-fixed(url(../../dist/img/old-paper-texture-mobile.jpg));
 }
 .img-cozinha-fixed {
 	@include background-image(url(../../dist/img/img-cozinha-02-mobile.jpg));
@@ -161,6 +171,7 @@
 	}
 	.container-black-bg {
 		padding: 40px 0 70px 0;
+		margin-top: 100px;
 		-webkit-box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
 		-moz-box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
 		box-shadow: -1px 0px 10px 0px rgba(50, 50, 50, 0.5);
