--- a/source/sass/_topbar.scss
+++ b/source/sass/_topbar.scss
@@ -72,6 +72,19 @@
 	}
 }
 
+/* IPHONE 4 */
+@media screen and (min-device-width: 320px) and (max-device-width: 480px) {
+	.topbar-home {
+		margin-bottom: 0;
+	}
+}
+/* SMARTPHONE PORTRAIT */
+@media screen and (max-device-width: 667px) and (orientation: landscape) {
+	.topbar-home {
+		margin-bottom: 10px;
+	}
+}
+
 /* DESKTOP */
 @media screen and (min-width: 769px) {
 	
